--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 </head>
 <body>
+    <h1>ТГПУ</h1>
+    <H2>ИИЯМС</H2>
+    <P>Я учусь в href="https:tpsy.ru <a> ТГПУ</a></P>
     Hello, html!
 </body>
 </html>
