--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>ТГПУ</h1>
     <H2>ИИЯМС</H2>
-    <P>Я учусь в  <a href="htts://tspu.ru"> ТГПУ</a></P>
-    Hello, html!
+    <P>Я учусь в  <a href="https://tspu.ru"> ТГПУ</a></P>
+<!--     Hello, html! -->
 </body>
 </html>
