добавление файла стилей

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 </html>
 <head>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <img src="gerbtspu118.png"/>
     <h1>ТГПУ</h1>
+    <ol>
+        <li>Русский</li>
+        <ul>
+            <li>Физика</li>
+            <li>Химия</li>
+        </ul>
+        <li>Китайский</li>
+    </ol>
+    
     <H2>ИИЯМС</H2>
     <P>Я учусь в  <a href="https://tspu.ru"> ТГПУ</a></P>
 <!--     Hello, html! -->
