--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     
     <H2>ИИЯМС</H2>
     <P>Я учусь в  <a href="https://tspu.ru"> ТГПУ</a></P>
+    <iframe 
+    src="https://rutube.ru/play/embed/e9578de3440666b6399408f84ed3ae6b" 
+    width="560" 
+    height="315" 
+    frameborder="0" 
+    allowfullscreen>
+    </iframe>
 <!--     Hello, html! -->
 </body>
 </html>
