--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-</html>
+<html>
 <head>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -24,6 +24,6 @@
     frameborder="0" 
     allowfullscreen>
     </iframe>
-<!--     Hello, html! -->
+
 </body>
 </html>
