css color align

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!doctype html>
 </html>
 <head>
-
+<link rel="stylesheet" href="style.css">
+<head>
+<img src= "gerbtspu118.png">
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>ТГПУ</h1>
+    <ol>
+        <li>Русский
+            <ul>
+                <li>физика</li>
+                <li>химия</li>
+            </ul>
+        </li>
+        <li>Китайский</li>
+    </ol>
     <H2>ИИЯМС</H2>
     <P>Я учусь в  <a href="https://tspu.ru"> ТГПУ</a></P>
 <!--     Hello, html! -->
