css color align

--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
 <link rel="stylesheet" href="style.css">
 <head>
-<img src= "gerbtspu118.png">
-</head>
-<link rel="stylesheet" href="style.css">
 <body>
-    <h1>ТГПУ</h1>
+    <img src= "gerbtspu118.png">
+    <h1>Домашняя страница</h1>
     <ol>
         <li>Русский
             <ul>
