Sun, Oct 19, 2025, 9:17 PM +07:00

--- a/index.html
+++ b/index.html
@@ -1,10 +1,137 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
+    <meta charset="UTF-8">
+    <title>Японская кухня</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fff5f5;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
 
+        .header {
+            background-color: #8b0000;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+
+        .nav {
+            background-color: #cc0000;
+            padding: 10px;
+            text-align: center;
+        }
+
+        .nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+
+        .nav a:hover {
+            text-decoration: underline;
+        }
+
+        .container {
+            width: 900px;
+            margin: 20px auto;
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            color: #8b0000;
+            border-bottom: 2px solid #ffcc00;
+            padding-bottom: 5px;
+        }
+
+        .dish {
+            margin: 20px 0;
+            padding: 15px;
+            background-color: #fff9f9;
+            border-left: 5px solid #8b0000;
+        }
+
+        .dish img {
+            width: 200px;
+            height: 150px;
+            float: left;
+            margin-right: 15px;
+            border: 2px solid #8b0000;
+        }
+
+        .footer {
+            background-color: #8b0000;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 20px;
+        }
+
+        .clear {
+            clear: both;
+        }
+    </style>
 </head>
 <body>
-    <h1>Японская кухня</h1>
-    start
+    <div class="header">
+        <h1>Японская кухня</h1>
+        <p>Искусство вкуса и гармонии</p>
+    </div>
+
+    <div class="nav">
+        <a href="index.html">Главная</a>
+        <a href="sushi.html">Суши</a>
+        <a href="ramen.html">Рамен</a>
+        <a href="bento.html">Бенто</a>
+    </div>
+
+    <div class="container">
+        <h2>Добро пожаловать в мир японской кухни!</h2>
+
+        <p>Японская кухня - это не просто еда, а настоящее искусство. Она отличается свежестью ингредиентов, красивой подачей и сбалансированным вкусом.</p>
+
+        <div class="dish">
+            <img src="https://images.unsplash.com/photo-1579584425555-c3ce17fd4351?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Суши">
+            <h3>Суши и роллы</h3>
+            <p>Суши - это самое известное японское блюдо во всем мире. Оно состоит из риса с уксусной заправкой и различных начинок, чаще всего морепродуктов.</p>
+            <p>Я люблю суши за их нежный вкус и красивое оформление. Каждый кусочек - это маленькое произведение искусства!</p>
+        </div>
+
+        <div class="dish">
+            <img src="https://images.unsplash.com/photo-1569718212165-3a8278d5f624?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Рамен">
+            <h3>Рамен</h3>
+            <p>Рамен - это сытный японский суп с лапшой. Он бывает с разными видами бульона: соевым, мисо, свиным или куриным.</p>
+            <p>Мне нравится рамен тем, что это очень сытное и согревающее блюдо, особенно в холодную погоду.</p>
+        </div>
+
+        <div class="dish">
+            <img src="https://images.unsplash.com/photo-1569050467449-8b6e68b9c6bc?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Бенто">
+            <h3>Бенто</h3>
+            <p>Бенто - это японский ланч-бокс, в котором еда красиво разложена по секциям. Обычно он содержит рис, рыбу или мясо, и овощи.</p>
+            <p>Мне нравится, как в бенто сочетаются разные вкусы и текстуры, и как красиво выглядит еда в такой упаковке.</p>
+        </div>
+
+        <div class="clear"></div>
+
+        <h2>Почему я люблю японскую кухню</h2>
+        <p>Я начала изучать японскую кухню, когда впервые попробовала суши. Меня поразило, насколько красиво подаются блюда и как гармонично сочетаются вкусы.</p>
+        <p>Теперь я стараюсь готовить японские блюда дома. Это не всегда просто, но очень интересно!</p>
+    </div>
+
+    <div class="footer">
+        <p>Сайт создан в рамках изучения HTML и CSS | 2023</p>
+    </div>
 </body>
 </html>
