Sun, Oct 19, 2025, 9:50 PM +07:00

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Японская кухня - это не просто еда, а настоящее искусство. Она отличается свежестью ингредиентов, красивой подачей и сбалансированным вкусом.</p>
 
         <div class="dish">
-            <img src="https://images.unsplash.com/photo-1579584425555-c3ce17fd4351?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Суши">
+            <img src="images/roll.JPG" alt="Суши">
             <h3>Суши и роллы</h3>
             <p>Суши - это самое известное японское блюдо во всем мире. Оно состоит из риса с уксусной заправкой и различных начинок, чаще всего морепродуктов.</p>
             <p>Я люблю суши за их нежный вкус и красивое оформление. Каждый кусочек - это маленькое произведение искусства!</p>
