Sun, Oct 19, 2025, 9:51 PM +07:00

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </div>
 
         <div class="dish">
-            <img src="https://images.unsplash.com/photo-1569718212165-3a8278d5f624?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Рамен">
+            <img src="images/ramen.jpeg" alt="Рамен">
             <h3>Рамен</h3>
             <p>Рамен - это сытный японский суп с лапшой. Он бывает с разными видами бульона: соевым, мисо или куриным.</p>
             <p>Мне нравится рамен тем, что это очень сытное и согревающее блюдо, особенно в холодную погоду.</p>
         </div>
 
         <div class="dish">
-            <img src="https://images.unsplash.com/photo-1569050467449-8b6e68b9c6bc?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Бенто">
+            <img src="images/bento.JPG" alt="Бенто">
             <h3>Бенто</h3>
             <p>Бенто - это японский ланч-бокс, в котором еда красиво разложена по секциям. Обычно он содержит рис, рыбу или мясо, и овощи.</p>
             <p>Мне нравится, как в бенто сочетаются разные вкусы и текстуры, и как красиво выглядит еда в такой упаковке.</p>
