Sun, Oct 19, 2025, 10:03 PM +07:00

--- a/index.html
+++ b/index.html
@@ -41,17 +41,11 @@
         <div class="dish">
             <img src="images/bento.JPG" alt="Бенто">
             <h3>Бенто</h3>
-            <p>Бенто - это японский ланч-бокс, в котором еда красиво разложена по секциям. Обычно он содержит рис, рыбу или мясо, и овощи.</p>
+            <p>Бенто - это японский ланч-бокс, в котором еда красиво разложена по секциям. </p>
             <p>Мне нравится, как в бенто сочетаются разные вкусы и текстуры, и как красиво выглядит еда в такой упаковке.</p>
         </div>
 
-        <div class="clear"></div>
 
-        <h2>Почему я люблю японскую кухню</h2>
-        <p>Я начала изучать японскую кухню, когда впервые попробовала суши. Меня поразило, насколько красиво подаются блюда и как гармонично сочетаются вкусы.</p>
-        <p>Теперь я стараюсь готовить японские блюда дома. Это не всегда просто, но очень интересно!</p>
-    </div>
 
-    
 </body>
 </html>
