Sun, Oct 19, 2025, 10:15 PM +07:00

--- a/sushi.html
+++ b/sushi.html
@@ -129,7 +129,7 @@
             <img src="https://images.unsplash.com/photo-1553621042-f6e147245754?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Роллы">
             <h3>Роллы (маки)</h3>
             <p>Роллы - это суши, завернутые в лист нори вместе с рисом и начинкой. Они бывают разных видов: тонкие (хосомаки) и толстые (футомаки).</p>
-            <p>Когда я готовлю роллы дома, мне нравится экспериментировать с разными начинками. Мои любимые - с авокадо и огурцом!</p>
+            <p>Когда я готовлю роллы дома, мне нравится экспериментировать с разными начинками.</p>
         </div>
 
         <div class="clear"></div>
