site Japanese kitchen

--- a/sushi.html
+++ b/sushi.html
@@ -2,103 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css"/>
     <title>Суши и роллы - Японская кухня</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #fff5f5;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
 
-        .header {
-            background-color: #8b0000;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 36px;
-        }
-
-        .nav {
-            background-color: #cc0000;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-
-        .nav a:hover {
-            text-decoration: underline;
-        }
-
-        .container {
-            width: 900px;
-            margin: 20px auto;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-
-        h2 {
-            color: #8b0000;
-            border-bottom: 2px solid #ffcc00;
-            padding-bottom: 5px;
-        }
-
-        .dish {
-            margin: 20px 0;
-            padding: 15px;
-            background-color: #fff9f9;
-            border-left: 5px solid #8b0000;
-        }
-
-        .dish img {
-            width: 200px;
-            height: 150px;
-            float: left;
-            margin-right: 15px;
-            border: 2px solid #8b0000;
-        }
-
-        .footer {
-            background-color: #8b0000;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 20px;
-        }
-
-        .clear {
-            clear: both;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-
-        th, td {
-            border: 1px solid #8b0000;
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #ffcc00;
-        }
-    </style>
 </head>
 <body>
     <div class="header">
@@ -119,14 +25,14 @@
         <p>Суши - это традиционное японское блюдо, которое состоит из специально приготовленного риса и различных морепродуктов. Главный секрет вкусных суши - это свежие ингредиенты и правильное приготовление риса.</p>
 
         <div class="dish">
-            <img src="https://images.unsplash.com/photo-1579584425555-c3ce17fd4351?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Нигири суши">
+            <img src="images/nigiri.jpg" alt="Нигири суши">
             <h3>Нигири суши</h3>
             <p>Нигири - это самый популярный вид суши. Он состоит из небольшого комочка риса, на который кладут кусочек рыбы или морепродукта. Иногда их связывают тонкой полоской нори.</p>
             <p>Мне нравится нигири за их простоту и возможность почувствовать настоящий вкус каждого ингредиента.</p>
         </div>
 
         <div class="dish">
-            <img src="https://images.unsplash.com/photo-1553621042-f6e147245754?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Роллы">
+            <img src="images/roll1.webp" alt="Роллы">
             <h3>Роллы (маки)</h3>
             <p>Роллы - это суши, завернутые в лист нори вместе с рисом и начинкой. Они бывают разных видов: тонкие (хосомаки) и толстые (футомаки).</p>
             <p>Когда я готовлю роллы дома, мне нравится экспериментировать с разными начинками.</p>
@@ -140,35 +46,29 @@
             <tr>
                 <th>Название</th>
                 <th>Описание</th>
-                <th>Мои впечатления</th>
+
             </tr>
             <tr>
                 <td>Нигири</td>
                 <td>Рис с кусочком рыбы сверху</td>
-                <td>Люблю за простоту и натуральный вкус</td>
+
             </tr>
             <tr>
                 <td>Маки</td>
                 <td>Роллы, завернутые в нори</td>
-                <td>Весело готовить, можно фантазировать с начинками</td>
+
             </tr>
             <tr>
                 <td>Урамаки</td>
                 <td>Роллы "наизнанку", рис снаружи</td>
-                <td>Нравятся за красивый вид с икрой или кунжутом</td>
+
             </tr>
             <tr>
                 <td>Сашими</td>
                 <td>Тонко нарезанная сырая рыба без риса</td>
-                <td>Пробовала только в ресторане, пока боюсь готовить дома</td>
+
             </tr>
         </table>
 
-        <h2></h2>
-
-    </div>
-
-
-    </div>
 </body>
 </html>
